dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: http
    port: 80          # Service port
    targetPort: 8080    # Container port
    # nodePort: 30080 # (optional) let Kubernetes auto-assign if not specified
